--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
+    "vue-ui-preloader": "^1.2.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
